fix navbar background color issue on IE

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -372,6 +372,7 @@ body {
     .navbar-inner {
         background-color: #7bc9dd;
         background-image: none;
+        filter: none;
     }
     .nav > li > a {
         color: #fff;
